--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -12,7 +12,7 @@
       </thead>
       <tbody>
       <tr th:each="member : ${members}">
-        <td th:text="${member.id}"></td>
+        <td th:text="${member.idx}"></td>
         <td th:text="${member.name}"></td>
       </tr>
       </tbody>
