--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -8,12 +8,14 @@
       <tr>
         <th>#</th>
         <th>이름</th>
+        <th>아이디</th>
       </tr>
       </thead>
       <tbody>
       <tr th:each="member : ${members}">
         <td th:text="${member.idx}"></td>
         <td th:text="${member.name}"></td>
+        <td th:text="${member.id}"></td>
       </tr>
       </tbody>
     </table>
