--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="container">
-    <form action="/members/new" method="post">
+    <form action="/login" method="post">
         <div class="form-group">
-            <label for="name">이름</label>
-            <input type="text" id="name" name="name" placeholder="이름을 입력하세요">
             <label for="name">아이디</label>
             <input type="text" id="id" name="id" placeholder="아이디를 입력하세요"><br>
             <label for="name">비밀번호</label>
